2010-06-06  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14560: Violation of naming conventions in sprite generation API
	* Fixed issue #14561: Violation of naming conventions in t3lib_compressor

2010-06-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14630: Backend doesn't use $this->pageRenderer

2010-06-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #1294: movie param of flash object not processed by prefixResourcePath(Thanks to Jigal van Hemert)
	* Fixed bug #14629: Copyright Year in Page Source is still wrong (Thanks to Jigal van Hemert)

2010-06-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14635: Caching framework file backend: Unit test fixes
	* Fixed bug #14632: Caching framework memcached backend: No exception thrown if set() fails and wrong boolean comparison
	* Fixed bug #14631: Caching framework memcached backend: Wrong memcache server detection in unit tests
	* Follow-up to #11386: Caching framework file backend does not return absolute path in getCacheDirectory()
	* Fixed bug #14455: [Performance] Wrong variable in t3lib_cache_memcachedbackend leads to redundant data (Thanks to Dan Osipov)

2010-06-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14625: htmlArea RTE: Inconsistant position of ok button

2010-06-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14626: Login refresh popup should not display news
	* Followup to #14387: Remove the feature "Enable extensions without review (basic security check)" from EM (Thanks to Helmut Hummel)

2010-06-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14615: Autosuggest function doesn't work with quotes

2010-06-04  Susanne Moog  <typo3@susannemoog.de>

	* Fixed bug #13818: tcemain versionSwap might break pages_language_overlay relations (thanks to Tolleiv Nietsch)

2010-06-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14397: htmlArea RTE: Incorrect encoding of some labels when BE is not utf-8

2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>
